--- a/Capstone.Web/Views/StockGame/Results.cshtml
+++ b/Capstone.Web/Views/StockGame/Results.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section Scripts {
-
+    <script src="~/Scripts/StockGame/Results.js" defer></script>
 }
 
 @{int counter = 1;}
@@ -20,52 +20,52 @@
         </div>
     </div>
 </div>
-        
+
 <div class="container results-container shadow-lg p-3 mb-5 bg-white rounded">
-            
-            <div class="row top-row debug">
-                <div class="col debug">
-                    <h1>Results</h1>
-                </div>
 
-            </div>
-
-            <div class="row top-row ">
-                <table class="table table-striped table-dark">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Player</th>
-                            <th scope="col">Companies</th>
-                            <th scope="col">Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                        @foreach (var i in Model)
-                        {
-                            if (counter == 1)
-                            {
-                                <tr bgcolor="#FF0000" class="winner-row">
-                                    <th scope="row">@(counter)</th>
-                                    <td>@(i.UserInfo.FullName)</td>
-                                    <td>@(i.OwnedStocks)</td>
-                                    <td>@(i.TotalCash)</td>
-                                </tr>
-                            }
-                            else
-                            {
-                                <tr>
-                                    <th scope="row">@(counter)</th>
-                                    <td>@(i.UserInfo.FullName)</td>
-                                    <td>@(i.OwnedStocks)</td>
-                                    <td>@(i.TotalCash)</td>
-                                </tr>
-                            }
-
-                            counter++;
-                        }
-                    </tbody>
-                </table>
-            </div>
+    <div class="row top-row debug">
+        <div class="col debug">
+            <h1>Results</h1>
         </div>
+
+    </div>
+
+    <div class="row top-row ">
+        <table class="table table-striped table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Player</th>
+                    <th scope="col">Companies</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                @foreach (var i in Model)
+                {
+                    if (counter == 1)
+                    {
+                        <tr bgcolor="#FF0000" class="winner-row">
+                            <th scope="row">@(counter)</th>
+                            <td>@(i.UserInfo.FullName)</td>
+                            <td>@(i.OwnedStocks)</td>
+                            <td>@(i.TotalCash)</td>
+                        </tr>
+                    }
+                    else
+                    {
+                        <tr>
+                            <th scope="row">@(counter)</th>
+                            <td>@(i.UserInfo.FullName)</td>
+                            <td>@(i.OwnedStocks)</td>
+                            <td>@(i.TotalCash)</td>
+                        </tr>
+                    }
+
+                    counter++;
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
